working onthe saleorer serch based on the filters